# Spline-Interpolation

./: .gitmodules  CMakeLists.txt  README.md
python/: CMakeLists.txt
python/bindings/: matrixConversion.hpp  splinekernel_python.cpp
python/scripts/: splineBuilder.py
splinekernel/: CMakeLists.txt
splinekernel/inc/: basisfunctions.hpp  curve.hpp  interpolation.hpp  surface.hpp
splinekernel/src/: basisfunctions.cpp  curve.cpp  interpolation.cpp  surface.cpp
splinekernel/test/: basisfunctions_test.cpp  curve_test.cpp  deboor_test.cpp  interpolation_test.cpp  surface_test.cpp
